themes/SuiteP/css/style.css
/* ... */
/*calendar popup fix*/
.calcell > a {
    background-color: #fff;
}



table.subpanel-table ul.subpanel a:hover,
table.subpanel-table li.sugar_action_button:hover,
table.subpanel-table .pagination .sugar_action_button:hover,
table.subpanel-table .pagination li.sugar_action_button:hover > form > a,
table.subpanel-table .pagination .sugar_action_button:hover > form > a,
table.subpanel-table .pagination .sugar_action_button:hover > form > a,
table.subpanel-table .pagination a,
.subpanel-table ul.subnav {
    background-color: #7b8a96;

}

table.subpanel-table .pagination a {
    padding-left: 8px;
    padding-right: 8px;
}

table.subpanel-table .pagination ul.clickMenu li span {
    float: right;
    margin-top: 12px;
    margin-left: 12px;
}


ul.SugarActionMenuIESub li a, ul.clickMenu li a, .list tr.pagination td.buttons ul.clickMenu > li > a:link, .list tr.pagination td.buttons ul.clickMenu > li > a



div.list-view-rounded-corners > table > thead > th,
.pagination-bottom {
    border: 2px solid transparent !important;
    overflow: hidden;
}

div.list-view-rounded-corners > table th:first-of-type {
    border-top-left-radius: 4px;
}

div.list-view-rounded-corners > table th:last-of-type {
    border-top-right-radius: 4px;
}

.pagination-bottom .paginationTable td:first-of-type {
    border-bottom-left-radius: 4px;
}

.pagination-bottom .paginationTable td:last-of-type {
    border-bottom-right-radius: 4px;
}

#history_search table td {
    width: auto !important;
}

#history_search table td:nth-of-type(2) select[multiple],
#history_search table td:nth-of-type(2) select[size] {
    height: 48px;
}

#history_search table td:nth-of-type(8) div {
    display: inline-block;
}
.col-advanced-search {
    margin-bottom: 16px;

}

.col-advanced-search label {
    font-weight: 700;
}

/*////////////////////////////////////////////////////////////////////////////////////////// MEDIA QUERIES //////////*/

@media (max-width: 3000px) {
    .sidebar {
        width: 10%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 10%;
    }

    .col-md-10 {
        width: 91%;
    }

    .button-toggle-expanded {
        left: 10% !important;
    }

    .button-toggle-collapsed {
        left: 0%;
    }
}

@media (max-width: 2000px) {
    .sidebar {
        width: 15%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 15%;
    }

    .col-md-10 {
        width: 85%;
    }

    .button-toggle-expanded {
        left: 15% !important;
    }

    .button-toggle-collapsed {
        left: 0%;
    }
}

@media (max-width: 1800px) {
    .sidebar {
        width: 15%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 15%;
    }

    .col-md-10 {
        width: 85%;
    }

    .button-toggle-expanded {
        left: 15% !important;
    }

    .button-toggle-collapsed {
        left: 0%;
    }

}

@media (max-width: 1700px) {
    .sidebar {
        width: 15%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 15%;
    }

    .col-md-10 {
        width: 85%;
    }

    .button-toggle-expanded {
        left: 15% !important;
    }

    .button-toggle-collapsed {
        left: 0%;
    }


}

@media (max-width: 1600px) {
    .sidebar {
        width: 20%;
    }

    #bootstrap-container.col-md-offset-2 {
        margin-left: 20%;
    }

    .col-md-10 {
        width: 80%;
    }

    .button-toggle-expanded {
        left: 20% !important;
    }

    .button-toggle-collapsed {
        left: 0%;
    }

    .navbar {
        max-height: 90px;
    }

    footer.expandedSidebar {
        width: 74%;
    }


}

@media (max-width: 1560px) {
    #searchform {
        display: none;
    }

    #usermenu {
        display: none;
    }

    #globalLinks {
        border: none;
        margin: 10px 0 0 0;
        padding: 0;
    }

    .navbar-form .form-control {
        margin: 8px 0 0 0;
    }

    #usermenucollapsed, #usermenucollapsed-mobile, #searchbutton {
        display: inline;
    }

    #desktop_notifications div.dropdown-menu {
        left: -140px;
    }

    .moremenu ul, ul.dropdown-menu {

    }

    li.topnav ul.dropdown-menu {
        left: 0px;
    }

    #search #query_string {
        left: -185px;
    }

    #search .dropdown-menu {
        background-color: transparent;
        padding: 10px;
        right: 6px;
        top: 14px;
    }

    #searchformdropdown button {
        background-color: transparent;
        color: #fff;
        border: none;
        float: left;
        width: 50px;
        display: block;
        margin-left: -50px;
        padding: 12px 12px 12px 12px;
        background-image: none, url("../../../../themes/SuiteP/images/p_search_button.svg"), url("../../../../themes/SuiteP/images/p_search_button.png");
        background-repeat: no-repeat;
        background-position: 13px 10px;
        text-indent: -9999px;
        overflow: hidden;
    }

    #searchformdropdown button:hover {
        background-position: 13px -44px;
    }

    #search #query_string {
        background-color: #65697A;
        color: #A2A5AF;
        font-size: 14px;
        letter-spacing: 1px;
        width: 200px;
        border: none;
        border-radius: 3px;
        padding: 12px 12px 12px 12px;
        height: auto;
    }

    #usermenucollapsed, #usermenucollapsed-mobile {
        background-color: transparent;
        height: 42px;
        width: 42px;
        background-image: none, url("../../../../themes/SuiteP/images/p_user_icon.svg"), url("../../../../themes/SuiteP/images/p_user_icon.png");
        background-repeat: no-repeat;
        background-position: 0 0;
        margin-top: 14px;
        border: none;
        margin-left: 0px;
    }

    #usermenucollapsed, #usermenucollapsed-mobile:hover {
        background-position: 0 -99px;
    }

    #content {
        width: 99%;
        margin-left: 1%;
    }
}
/* ... */

